[gd_scene load_steps=12 format=3 uid="uid://overworld_scene"]

[ext_resource type="Script" path="res://scenes/overworld/overworld.gd" id="1_overworld"]
[ext_resource type="Script" path="res://scenes/overworld/isometric_camera.gd" id="2_camera"]
[ext_resource type="PackedScene" path="res://entities/player/player.tscn" id="3_player"]
[ext_resource type="PackedScene" path="res://scenes/battle/battle_arena.tscn" id="4_battle"]
[ext_resource type="Script" path="res://scenes/hud/game_hud.gd" id="5_hud"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.2, 0.35, 0.18, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_path"]
albedo_color = Color(0.45, 0.38, 0.28, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rock"]
albedo_color = Color(0.4, 0.38, 0.35, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_trunk"]
albedo_color = Color(0.35, 0.22, 0.12, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_leaves"]
albedo_color = Color(0.15, 0.45, 0.15, 1)

[sub_resource type="Environment" id="Environment_world"]
background_mode = 1
background_color = Color(0.35, 0.5, 0.7, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.42, 0.5, 1)
ambient_light_energy = 0.6
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true
glow_intensity = 0.3
fog_enabled = true
fog_light_color = Color(0.5, 0.55, 0.65, 1)
fog_density = 0.002

[node name="Overworld" type="Node3D"]
script = ExtResource("1_overworld")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_world")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 20, 0)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
use_collision = true
collision_layer = 4
size = Vector3(60, 0.5, 60)
material = SubResource("StandardMaterial3D_ground")

[node name="Path1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
size = Vector3(40, 0.02, 2.5)
material = SubResource("StandardMaterial3D_path")

[node name="Path2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
size = Vector3(2.5, 0.02, 40)
material = SubResource("StandardMaterial3D_path")

[node name="Rock1" type="CSGSphere3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1.2, 0, 0, 0, 1.5, 15, 0.5, 8)
radius = 0.5
material = SubResource("StandardMaterial3D_rock")

[node name="Rock2" type="CSGSphere3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.0, 0, 0, 0, 1.8, -12, 0.4, -6)
radius = 0.5
material = SubResource("StandardMaterial3D_rock")

[node name="Rock3" type="CSGSphere3D" parent="."]
transform = Transform3D(1.8, 0, 0, 0, 0.8, 0, 0, 0, 1.3, 6, 0.3, -15)
radius = 0.5
material = SubResource("StandardMaterial3D_rock")

[node name="Tree1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 4)

[node name="Trunk" type="CSGCylinder3D" parent="Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
radius = 0.2
height = 2.0
material = SubResource("StandardMaterial3D_trunk")

[node name="Leaves" type="CSGSphere3D" parent="Tree1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
radius = 1.0
material = SubResource("StandardMaterial3D_leaves")

[node name="Tree2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="Trunk" type="CSGCylinder3D" parent="Tree2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
radius = 0.25
height = 2.4
material = SubResource("StandardMaterial3D_trunk")

[node name="Leaves" type="CSGSphere3D" parent="Tree2"]
transform = Transform3D(1.2, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 3.0, 0)
radius = 1.0
material = SubResource("StandardMaterial3D_leaves")

[node name="Tree3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -12)

[node name="Trunk" type="CSGCylinder3D" parent="Tree3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
radius = 0.18
height = 1.8
material = SubResource("StandardMaterial3D_trunk")

[node name="Leaves" type="CSGSphere3D" parent="Tree3"]
transform = Transform3D(0.9, 0, 0, 0, 0.8, 0, 0, 0, 0.9, 0, 2.2, 0)
radius = 1.0
material = SubResource("StandardMaterial3D_leaves")

[node name="IsometricCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707, -0.354, 0.612, 0, 0.866, 0.5, -0.866, -0.354, 0.612, 0, 12, 12)
script = ExtResource("2_camera")

[node name="Player" parent="." instance=ExtResource("3_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="BattleArena" parent="." instance=ExtResource("4_battle")]
visible = false

[node name="Enemies" type="Node3D" parent="."]

[node name="WildDragons" type="Node3D" parent="."]

[node name="GameHUD" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("5_hud")
